styles: fixng alignment on path="my_sells"

--- a/frontend/src/styles/pages/SellerSells.css
+++ b/frontend/src/styles/pages/SellerSells.css
@@ -55,6 +55,7 @@
 
 .seller_buttons {
   display: flex;
+  margin: auto;
   margin-top: 16px;
   gap: 24px;
 }
@@ -96,9 +97,19 @@
 }
 
 @media screen and (max-width: 680px) {
+  .seller_sells_section {
+    min-height: 80vh;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 64px;
+    padding: 24px;
+  }
+
   .seller_product {
     max-width: 200px;
   }
+
   .product_div {
     border: 2px solid black;
     border-radius: 8px;
